manifests/kube-prometheus-stack/kube-prometheus-ns.yml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: kube-prometheus
spec: {}
status: {}
